--- a/Docs/Godot Notes/.obsidian/workspace
+++ b/Docs/Godot Notes/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CSharp/CSharp Signals.md",
+            "file": "Rule Tile Automation Idea.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CSharp/CSharp Signals.md",
+                "file": "Rule Tile Automation Idea.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "CSharp/CSharp Signals.md",
+                "file": "Rule Tile Automation Idea.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "CSharp/CSharp Signals.md"
+                "file": "Rule Tile Automation Idea.md"
               }
             }
           },
@@ -139,15 +139,15 @@
   },
   "active": "860b5bdf3d8d0484",
   "lastOpenFiles": [
+    "NOTE ABOUT CODE SNIPPETS.md",
+    "API/Nodes.md",
+    "Images/tiles.png",
+    "Images/Pasted image 20220918211624.png",
+    "Cross Language Scripting/Creating Script Templates.md",
+    "CSharp/CSharp Signals.md",
     "CSharp/CSharp Exports.md",
     "CSharp/CSharp Features.md",
     "CSharp/Differences between CSharp and Gdscript.md",
-    "CSharp/CSharp Signals.md",
-    "CSharp/CSharp Preprocessor Defines.md",
-    "Cross-Language Scripting.md",
-    "Cross-Language Scripting - Instantiating Nodes.md",
-    "Cross-Langauge Scripting - Fields.md",
-    "Cross-Language Scripting - Calling Methods.md",
-    "tiles.png"
+    "CSharp/CSharp Preprocessor Defines.md"
   ]
 }
