--- a/Steam Eagles GDD/.obsidian/workspace
+++ b/Steam Eagles GDD/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Game Design Document/Technology/Official GitHub Repository.md",
+            "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Game Design Document/Technology/Official GitHub Repository.md",
+                "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Game Design Document/Technology/Official GitHub Repository.md",
+                "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Game Design Document/Technology/Official GitHub Repository.md"
+                "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md"
               }
             }
           }
@@ -131,15 +131,15 @@
   },
   "active": "f709a1b4e360c2af",
   "lastOpenFiles": [
+    "Game Design Document/Gameplay/Level Design/World Layout.md",
+    "assets/Excalidraw/World Structure.excalidraw.md",
+    "Game Design Document/Gameplay/Mechanics/Mechanics.md",
+    "Game Design Document/Technology/Gas Sim Unity Port - Project Structure (I22).png",
     "Game Design Document/Technology/Refactoring the Gas Simulation.md",
+    "Game Design Document/Technology/Official GitHub Repository.md",
     "assets/Excalidraw/Drawing 2022-09-27 18.12.32.excalidraw.md",
     "assets/media/reference art/Pasted image 20220925203753.png",
     "assets/media/Concept Art.md",
-    "assets/media/Concept_sketches.jpg",
-    "assets/media/reference art/airship a.png",
-    "assets/Excalidraw/Drawing 2022-09-25 14.37.42.excalidraw.md",
-    "Brain Dump.md",
-    "GDD - Credits.md",
-    "Game Design Document/Storytelling/Chapter 1 - The Departure.md"
+    "assets/media/Concept_sketches.jpg"
   ]
 }
