--- a/Steam Eagles GDD/.obsidian/workspace
+++ b/Steam Eagles GDD/.obsidian/workspace
@@ -7,11 +7,9 @@
         "id": "f709a1b4e360c2af",
         "type": "leaf",
         "state": {
-          "type": "markdown",
+          "type": "excalidraw",
           "state": {
-            "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
-            "mode": "source",
-            "source": false
+            "file": "assets/Excalidraw/Drawing 2022-10-02 00.22.14.excalidraw.md"
           }
         }
       }
@@ -77,7 +75,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
+                "file": "assets/Excalidraw/Drawing 2022-10-02 00.22.14.excalidraw.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +92,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
+                "file": "assets/Excalidraw/Drawing 2022-10-02 00.22.14.excalidraw.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +115,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Game Design Document/Gameplay/Level Design/Types of world boundaries.md"
+                "file": "assets/Excalidraw/Drawing 2022-10-02 00.22.14.excalidraw.md"
               }
             }
           }
@@ -131,15 +129,15 @@
   },
   "active": "f709a1b4e360c2af",
   "lastOpenFiles": [
+    "assets/Excalidraw/Drawing 2022-09-27 18.12.32.excalidraw.md",
+    "assets/Excalidraw/Drawing 2022-10-02 00.22.14.excalidraw.md",
+    "Pasted Image 20221002011044_658.png",
+    "assets/inkscape_grid_template.svg",
+    "Game Design Document/Gameplay/Level Design/Types of world boundaries.md",
+    "Game Design Document/Gameplay/Level Design/Level Design.md",
     "Game Design Document/Gameplay/Level Design/World Layout.md",
     "assets/Excalidraw/World Structure.excalidraw.md",
     "Game Design Document/Gameplay/Mechanics/Mechanics.md",
-    "Game Design Document/Technology/Gas Sim Unity Port - Project Structure (I22).png",
-    "Game Design Document/Technology/Refactoring the Gas Simulation.md",
-    "Game Design Document/Technology/Official GitHub Repository.md",
-    "assets/Excalidraw/Drawing 2022-09-27 18.12.32.excalidraw.md",
-    "assets/media/reference art/Pasted image 20220925203753.png",
-    "assets/media/Concept Art.md",
-    "assets/media/Concept_sketches.jpg"
+    "Game Design Document/Technology/Gas Sim Unity Port - Project Structure (I22).png"
   ]
 }
